--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -1,9 +1,9 @@
 {
 	"manifest_version": 2,
-	"name": "Cloud To Butt",
+	"name": "MyCurses",
 	"version": "1.0",
-	"description": "Replaces the text 'the cloud' with 'my butt'.",
-	"content_scripts": 
+	"description": "Replaces the text 'MyCourses' with 'MyCurses'.",
+	"content_scripts":
 	[
 		{
 			"matches": ["*://*/*"],
